--- a/navigateur.html
+++ b/navigateur.html
@@ -3,125 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Navigateur Web</title>
+    <title>Navigateur Web</title>
     <style>
         body {
-            margin: 0;
             font-family: Arial, sans-serif;
             background: #1e1e1e;
             color: white;
+            margin: 0;
+            padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh;
+            align-items: center;
         }
         header {
-            display: flex;
-            padding: 10px;
+            width: 100%;
             background: #333;
-            align-items: center;
-            gap: 10px;
-        }
-        button {
-            background: #575fcf;
-            color: white;
-            border: none;
-            padding: 8px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        button:disabled {
-            background: #555;
-            cursor: not-allowed;
+            padding: 10px;
+            text-align: center;
         }
         input {
-            flex: 1;
-            padding: 8px;
+            width: 80%;
+            padding: 10px;
             border-radius: 5px;
             border: none;
             font-size: 16px;
             outline: none;
-            text-align: center;
         }
-        iframe {
-            flex: 1;
-            width: 100%;
+        button {
+            padding: 10px;
+            background: #575fcf;
+            color: white;
             border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-left: 5px;
+        }
+        #results {
+            width: 90%;
+            margin-top: 20px;
+        }
+        .result {
+            background: #2a2a2a;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
+        .result a {
+            color: #6fa3ef;
+            text-decoration: none;
+        }
+        .result img {
+            max-width: 100px;
+            height: auto;
+            display: block;
+            margin-top: 5px;
         }
     </style>
 </head>
 <body>
 
     <header>
-        <button id="backButton" disabled>⬅️</button>
-        <button id="forwardButton" disabled>➡️</button>
-        <input type="text" id="urlInput" placeholder="https://example.com">
-        <button id="goButton">Go</button>
+        <input type="text" id="searchQuery" placeholder="Rechercher sur Google...">
+        <button onclick="searchGoogle()">🔍</button>
     </header>
 
-    <iframe id="browserFrame" src="https://example.com"></iframe>
+    <div id="results"></div>
 
     <script>
-        const backButton = document.getElementById("backButton");
-        const forwardButton = document.getElementById("forwardButton");
-        const urlInput = document.getElementById("urlInput");
-        const goButton = document.getElementById("goButton");
-        const browserFrame = document.getElementById("browserFrame");
+        async function searchGoogle() {
+            const query = document.getElementById("searchQuery").value.trim();
+            if (!query) return;
 
-        let historyStack = [];
-        let currentIndex = -1;
+            const apiKey = "YOUR_SERPAPI_KEY"; // Remplace par ta clé SerpAPI
+            const url = `https://serpapi.com/search.json?q=${encodeURIComponent(query)}&api_key=${apiKey}`;
 
-        function navigateTo(url) {
-            if (!url.startsWith("http://") && !url.startsWith("https://")) {
-                url = "https://" + url;
+            document.getElementById("results").innerHTML = "<p>Recherche en cours...</p>";
+
+            try {
+                const response = await fetch(url);
+                const data = await response.json();
+
+                if (!data.organic_results) {
+                    document.getElementById("results").innerHTML = "<p>Aucun résultat trouvé.</p>";
+                    return;
+                }
+
+                let output = "";
+                data.organic_results.forEach(result => {
+                    output += `
+                        <div class="result">
+                            <a href="${result.link}" target="_blank"><h3>${result.title}</h3></a>
+                            <p>${result.snippet || "Pas de description disponible"}</p>
+                            ${result.thumbnail ? `<img src="${result.thumbnail}" alt="Image">` : ""}
+                        </div>
+                    `;
+                });
+
+                document.getElementById("results").innerHTML = output;
+            } catch (error) {
+                console.error(error);
+                document.getElementById("results").innerHTML = "<p>Erreur lors de la récupération des résultats.</p>";
             }
-            browserFrame.src = url;
-
-            if (currentIndex === historyStack.length - 1) {
-                historyStack.push(url);
-                currentIndex++;
-            } else {
-                historyStack = historyStack.slice(0, currentIndex + 1);
-                historyStack.push(url);
-                currentIndex++;
-            }
-
-            updateButtons();
         }
-
-        function updateButtons() {
-            backButton.disabled = currentIndex <= 0;
-            forwardButton.disabled = currentIndex >= historyStack.length - 1;
-        }
-
-        goButton.addEventListener("click", () => {
-            const url = urlInput.value.trim();
-            if (url) navigateTo(url);
-        });
-
-        urlInput.addEventListener("keypress", (event) => {
-            if (event.key === "Enter") {
-                const url = urlInput.value.trim();
-                if (url) navigateTo(url);
-            }
-        });
-
-        backButton.addEventListener("click", () => {
-            if (currentIndex > 0) {
-                currentIndex--;
-                browserFrame.src = historyStack[currentIndex];
-                urlInput.value = historyStack[currentIndex];
-                updateButtons();
-            }
-        });
-
-        forwardButton.addEventListener("click", () => {
-            if (currentIndex < historyStack.length - 1) {
-                currentIndex++;
-                browserFrame.src = historyStack[currentIndex];
-                urlInput.value = historyStack[currentIndex];
-                updateButtons();
-            }
-        });
     </script>
 
 </body>
