--- a/navigateur.html
+++ b/navigateur.html
@@ -74,7 +74,7 @@
             const query = document.getElementById("searchQuery").value.trim();
             if (!query) return;
 
-            const apiKey = "YOUR_SERPAPI_KEY"; // Remplace par ta clé SerpAPI
+            const apiKey = "00b25ab0b1e1877676d8634874fda3d10ab4171ea4b869e3461b39a1770deb90"; // Remplace par ta clé SerpAPI
             const url = `https://serpapi.com/search.json?q=${encodeURIComponent(query)}&api_key=${apiKey}`;
 
             document.getElementById("results").innerHTML = "<p>Recherche en cours...</p>";
