--- a/navigateur.html
+++ b/navigateur.html
@@ -1,111 +1,197 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigateur Web</title>
+    <title>Stylish Web Navigator</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #1e1e1e;
-            color: white;
+        /* Global Styles */
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #1f1c2c, #928dab);
+            color: #fff;
         }
+
         header {
-            width: 100%;
-            background: #333;
-            padding: 10px;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 15px;
+            background: #2c2c54;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            z-index: 10;
         }
-        input {
-            width: 80%;
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            font-size: 16px;
+
+        header input {
+            flex: 1;
+            margin: 0 10px;
+            padding: 10px 15px;
+            border: 2px solid #575fcf;
+            border-radius: 20px;
             outline: none;
+            font-size: 16px;
+            background: #3c40c6;
+            color: #fff;
+            transition: all 0.3s ease-in-out;
         }
-        button {
-            padding: 10px;
+
+        header input:focus {
+            border-color: #0be881;
             background: #575fcf;
-            color: white;
+        }
+
+        header button {
+            padding: 10px 15px;
+            font-size: 16px;
+            color: #fff;
+            background: #575fcf;
             border: none;
+            border-radius: 20px;
             cursor: pointer;
-            border-radius: 5px;
-            margin-left: 5px;
+            transition: background 0.3s ease;
         }
-        #results {
-            width: 90%;
-            margin-top: 20px;
+
+        header button:hover {
+            background: #0be881;
         }
-        .result {
-            background: #2a2a2a;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
+
+        #backButton, #forwardButton {
+            background: #3c40c6;
         }
-        .result a {
-            color: #6fa3ef;
-            text-decoration: none;
+
+        #backButton:hover, #forwardButton:hover {
+            background: #0be881;
         }
-        .result img {
-            max-width: 100px;
-            height: auto;
-            display: block;
-            margin-top: 5px;
+
+        iframe {
+            flex: 1;
+            width: 100%;
+            border: none;
+            box-shadow: 0 -4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Loading Spinner */
+        #spinner {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 50px;
+            height: 50px;
+            border: 5px solid rgba(255, 255, 255, 0.3);
+            border-top: 5px solid #0be881;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            display: none;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: translate(-50%, -50%) rotate(0deg);
+            }
+            100% {
+                transform: translate(-50%, -50%) rotate(360deg);
+            }
         }
     </style>
 </head>
 <body>
-
     <header>
-        <input type="text" id="searchQuery" placeholder="Rechercher sur Google...">
-        <button onclick="searchGoogle()">🔍</button>
+        <button id="backButton" disabled>⬅️</button>
+        <button id="forwardButton" disabled>➡️</button>
+        <input type="text" id="urlInput" placeholder="Enter a website URL..." />
+        <button id="goButton">Go</button>
     </header>
-
-    <div id="results"></div>
+    <iframe id="webView" src="about:blank"></iframe>
+    <div id="spinner"></div>
 
     <script>
-        async function searchGoogle() {
-            const query = document.getElementById("searchQuery").value.trim();
-            if (!query) return;
+        const backButton = document.getElementById('backButton');
+        const forwardButton = document.getElementById('forwardButton');
+        const urlInput = document.getElementById('urlInput');
+        const goButton = document.getElementById('goButton');
+        const webView = document.getElementById('webView');
+        const spinner = document.getElementById('spinner');
 
-            const apiKey = "00b25ab0b1e1877676d8634874fda3d10ab4171ea4b869e3461b39a1770deb90"; // Remplace par ta clé SerpAPI
-            const url = `https://serpapi.com/search.json?q=${encodeURIComponent(query)}&api_key=${apiKey}`;
+        let historyStack = [];
+        let currentIndex = -1;
 
-            document.getElementById("results").innerHTML = "<p>Recherche en cours...</p>";
+        // Navigate to a new URL
+        const navigateTo = (url) => {
+            if (url === '') return;
 
-            try {
-                const response = await fetch(url);
-                const data = await response.json();
-
-                if (!data.organic_results) {
-                    document.getElementById("results").innerHTML = "<p>Aucun résultat trouvé.</p>";
-                    return;
+            // If the URL is Google Custom Search URL, append the search query
+            if (url.startsWith("https://cse.google.com/cse")) {
+                let query = urlInput.value.trim();
+                if (query) {
+                    // Adding the search term to the CSE URL
+                    url = `https://cse.google.com/cse?cx=9716ab9aa7fa44ca2&q=${encodeURIComponent(query)}`;
                 }
-
-                let output = "";
-                data.organic_results.forEach(result => {
-                    output += `
-                        <div class="result">
-                            <a href="${result.link}" target="_blank"><h3>${result.title}</h3></a>
-                            <p>${result.snippet || "Pas de description disponible"}</p>
-                            ${result.thumbnail ? `<img src="${result.thumbnail}" alt="Image">` : ""}
-                        </div>
-                    `;
-                });
-
-                document.getElementById("results").innerHTML = output;
-            } catch (error) {
-                console.error(error);
-                document.getElementById("results").innerHTML = "<p>Erreur lors de la récupération des résultats.</p>";
             }
-        }
-    </script>
 
+            spinner.style.display = 'block'; // Show spinner
+            webView.src = url;
+            if (currentIndex === historyStack.length - 1) {
+                historyStack.push(url);
+                currentIndex++;
+            } else {
+                historyStack = historyStack.slice(0, currentIndex + 1);
+                historyStack.push(url);
+                currentIndex++;
+            }
+            updateButtons();
+        };
+
+        // Update button states
+        const updateButtons = () => {
+            backButton.disabled = currentIndex <= 0;
+            forwardButton.disabled = currentIndex >= historyStack.length - 1;
+        };
+
+        // Event listeners
+        goButton.addEventListener('click', () => {
+            const url = urlInput.value.trim();
+            if (url) navigateTo(url);
+        });
+
+        backButton.addEventListener('click', () => {
+            if (currentIndex > 0) {
+                currentIndex--;
+                webView.src = historyStack[currentIndex];
+                urlInput.value = historyStack[currentIndex];
+                updateButtons();
+            }
+        });
+
+        forwardButton.addEventListener('click', () => {
+            if (currentIndex < historyStack.length - 1) {
+                currentIndex++;
+                webView.src = historyStack[currentIndex];
+                urlInput.value = historyStack[currentIndex];
+                updateButtons();
+            }
+        });
+
+        urlInput.addEventListener('keypress', (event) => {
+            if (event.key === 'Enter') {
+                const url = urlInput.value.trim();
+                if (url) navigateTo(url);
+            }
+        });
+
+        // Hide spinner when the iframe finishes loading
+        webView.addEventListener('load', () => {
+            spinner.style.display = 'none';
+        });
+    </script>
 </body>
 </html>
